--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,13 @@
     <title> Jackson Kindel </title>
     <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale.0">
-            <link rel="stylesheet" href="MiniProject2.css">
+            <link rel="stylesheet" href="Index.css">
                 <script type="text/javascript"> </script> 
 
 </head>
 
   <body>
+      
 <h1> A load of fuckin bullshit </h1>
 
 </div class="introduction">
